HtmlToPdf con libreira SyncFusion funciona bien, se agrego HtmlToPdf con ItextSharp pero todavia no funciona.

--- a/PDFSample/Assets/Template/01.htm
+++ b/PDFSample/Assets/Template/01.htm
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1250">
     <meta name="generator" content="PSPad editor, www.pspad.com">
-    <title>{{TITLE}}</title>
+    <link type="text/css" rel="stylesheet" href="/Assets/Css/Template.css">
+    <title>CONDICIONES GENERALES</title>
 </head>
 <body>
     <div style="page-break-before: always;">&nbsp;</div>
@@ -19,7 +20,7 @@
 
                     <div class="masterheaderclass">
                         <div class="logoplanovaloclass">
-                            <img src="{{APPLICATIONROOT}}images/LogoPlanOvalo.png" style="width:120px;" />
+                            <img src="/Assets/images/LogoPlanOvalo.png" style="width:120px;" />
                         </div>
                         <div class="headerdireccionclass">
                             <span class="boldmediana">
@@ -813,7 +814,7 @@
                 <div class="containerclass">
                     <div class="masterheaderclass">
                         <div class="logoplanovaloclass">
-                            <img src="{{APPLICATIONROOT}}images/LogoPlanOvalo.png" style="width:120px;" />
+                            <img src="/Assets/images/LogoPlanOvalo.png" style="width:120px;" />
                         </div>
                         <div class="headerdireccionclass">
                             <span class="boldmediana">
@@ -1200,7 +1201,7 @@
                 <div class="containerclass">
                     <div class="masterheaderclass">
                         <div class="logoplanovaloclass">
-                            <img src="{{APPLICATIONROOT}}images/LogoPlanOvalo.png" style="width:120px;">
+                            <img src="/Assets/images/LogoPlanOvalo.png" style="width:120px;">
                         </div>
                         <div class="headerdireccionclass">
                             <span class="boldmediana">
