--- a/PDFSample/Views/Home/PDF.cshtml
+++ b/PDFSample/Views/Home/PDF.cshtml
@@ -12,6 +12,7 @@
         <p>
             <a href=@Url.Action("ConvertSF", "Home") class="btn btn-primary btn-lg">Convert Syncfusion »</a>
             <a href=@Url.Action("ConvertIT","Home") class="btn btn-primary btn-lg">Convert IText »</a>
+            <a href=@Url.Action("ConvertITS","Home") class="btn btn-primary btn-lg">Convert ITextSharp »</a>
         </p>
     </div>
 <div>
